Increase (a bit) java coverage